# gbe-runner

./: Cargo.toml
fixtures/: e2e-llm-pipeline.yaml  http-pipeline.yaml  input-wiring.yaml
src/: composite_operative.rs  config.rs  driver.rs  error.rs  http_operative.rs  lib.rs  main.rs  memory_store.rs  mock_operative.rs  molecule_operative.rs  operative.rs  orchestrator.rs  shell_operative.rs  state.rs
tests/: e2e_test.rs  shell_runner_test.rs
