[package]
name = "gbe-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
gbe-jobs-domain = { path = "../gbe-nexus/crates/jobs-domain" }
gbe-nexus = { path = "../gbe-nexus/crates/nexus" }
gbe-nexus-memory = { path = "../gbe-nexus/crates/nexus-memory" }
gbe-state-store = { path = "../gbe-nexus/crates/state-store" }
gbe-protocol = { path = "../gbe-envoy/protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
ulid = "1"
bytes = "1"
async-trait = "0.1"
