[package]
name = "gbe-operative"
version = "0.1.0"
edition = "2021"

[dependencies]
gbe-jobs-domain = { path = "../gbe-nexus/crates/jobs-domain" }
gbe-oracle = { path = "../gbe-oracle" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
