[package]
name = "gbe-operative"
version = "0.1.0"
edition = "2021"

[dependencies]
gbe-jobs-domain = { path = "../gbe-nexus/crates/jobs-domain" }
gbe-nexus = { path = "../gbe-nexus/crates/nexus" }
gbe-oracle = { path = "../gbe-oracle" }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
